--- a/src/main/resources/templates/item/itemDtl.html
+++ b/src/main/resources/templates/item/itemDtl.html
@@ -7,30 +7,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
     <th:block layout:fragment="script">
-        <script th:inline="javascript">
+        <script th:inline="javascript"> //th:inline쓰면 먼저 타임리프가 자바스크립트 실행해준다
             $(document).ready(function (){
-                calculateToalPrice();
+                calculateTotalPrice();
 
-                $("#count").change(function (){
-                    calculateToalPrice();
+                $("#count").change(function(){
+                    calculateTotalPrice();
                 });
             });
 
-            function calculateToalPrice(){
+            function calculateTotalPrice(){
                 var count = $("#count").val();
                 var price = $("#price").val();
                 var totalPrice = price*count;
                 $("#totalPrice").html(totalPrice + '원');
+            }
+
+            function order(){
+                var token = $("meta[name='_csrf']").attr("content");
+                var header = $("meta[name='_csrf_header']").attr("content");
+
+                var url = "/order";
+                var paramData = {
+                    itemId : $("#itemId").val(),
+                    count : $("#count").val()
+                };
+
+                var param = JSON.stringify(paramData);
+
+                $.ajax({
+                    url : url,
+                    type : "POST",
+                    contentType : "application/json",
+                    data : param,
+                    beforeSend : function (xhr){
+                    //    데이터를 전송하기 전에 헤더에 csrf값을 설정
+                        xhr.setRequestHeader(header,token);
+                    },
+                    dataType : "json",
+                    cache : false,
+                    success : function (result, status){
+                        alert("주문이 완료되었습니다.");
+                        location.href='/';
+                    },
+                    error : function (jqXHR, status, error){
+
+                        if(jqXHR.status == '401'){
+                            alert('로그인후 이용해주세요.');
+                            location.href='/members/login';
+                        } else{
+                            alert(jqXHR.responseText);
+                        }
+                    }
+                });
             }
         </script>
     </th:block>
