--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -46,6 +46,49 @@
             }
         </style>
     </th:block>
+
+    <th:block layout:fragment="script">
+
+        <script th:inline="javascript">
+            function cancelOrder(orderId){
+                const token = $("meta[name='_csrf']").attr("content")
+                const header =$("meta[name='_csrf_header']").attr("content")
+
+                let url = "/order/" + orderId + "/cancel";
+                let paramData = {
+                    orderId : orderId,
+                };
+
+                let param = JSON.stringify(paramData);
+
+                $.ajax({
+                    url     : url,
+                    type    : "POST",
+                    contentType : "application/json",
+                    data    : param,
+                    beforeSend : function (xhr){
+                    //    데이터를 전송하기 전에 헤더에 csrf 값을 설정
+                        xhr.setRequestHeader(header, token);
+                    },
+                    dataType : "json",
+                    cache : false,
+                    success : function (result, status){
+                        alert("주문이 취소 되었습니다.");
+                        location.href='/orders/' + [[${page}]];
+                    },
+                    error : function (jqXHR, status, error){
+                        if(jqXHR.status == '401'){
+                            alert('로그인 후 이용해주세요');
+                            location.href='/members/login';
+                        } else {
+                            alert(jqXHR.responseText);
+                        }
+                    }
+                });
+            }
+        </script>
+    </th:block>
+
 </head>
 <body>
 
@@ -53,11 +96,17 @@
 
     <h2 class="mb-4">구매이력</h2>
 
+
+
     <div th:each="order : ${orders.getContent()}">
         <div class="d-flex mb-3 align-self-center">
             <h4 th:text="${order.orderDate} + ' 주문'"></h4>
             <div class="ml-3">
                 <th:block th:if="${order.orderStatus == T(com.bitc.shop.constant.OrderStatus).ORDER}">
+                    <button type="button" class="btn btn-outline-secondary"
+                            th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문취소</button>
+                </th:block>
+                <th:block th:unless="${order.orderStatus == T(com.bitc.shop.constant.OrderStatus).ORDER}">
                     <h4>(취소완료)</h4>
                 </th:block>
             </div>
